@@ -1,3 +1,9 @@
+globus-gass-copy (9.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * Test fixes
+
+ -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 14:34:47 -0500
+
 globus-gass-copy (9.4-1+gt6.@distro@) @distro@; urgency=low
 
   * Test fixes
